# Solver_Test

./: CMakeLists.txt  README.md  main.cpp  matrixio.h
CMake/: FindMKL.cmake  FindMPILibraries.cmake
Testing/Examples/fidesys_static_3d/: B.vec  X.vec  fidesys05.jou
Testing/RunScripts/: config.cmd
